--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "mongodb": "~1.4",
     "monk": "~1.0.1",
     "express-session":"~1.13.0",
-    "connect-redis":"~3.0.2"
+    "connect-mongo":"~1.1.0"
   }
 }
