--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ap-express",
-  "version": "0.0.0",
-  "private": true,
+  "description": "a node.js express application for DeltaWeb",
+  "version": "0.1.0",
+  "author": "Wei Fang",
   "scripts": {
     "start": "node ./bin/www"
   },
